--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["env", "react", "stage-1"]
+  "presets": [
+    "react",
+    "es2015",
+    "stage-0",
+    "stage-3"
+  ],
+  "plugins": [
+    "transform-function-bind"
+  ],
+  "env": {
+    "development": {
+      "plugins": []
+    }
+  }
 }
