--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,24 @@
 {
-  "root": true,
-  "parser": "babel-eslint",
-  "extends": "airbnb",
   "env": {
-  "browser": true
+    "browser": true,
+    "node": true,
+    "es6": true,
   },
-  "rules": {
-    "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
-    "no-plusplus": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./webpack.config.js"]}],
-    "react/forbid-prop-types": "off",
-    "react/jsx-filename-extension": "off",
-    "react/no-array-index-key": "off"
+  "globals": {
+    "NODE_ENV": true,
+    "WP_IS_DEV": true
   },
+  "extends": "airbnb",
   "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module",
     "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
+      "impliedStrict": true,
+      "jsx": true
     }
   },
-  "plugins": [
-    "react"
-  ]
+  "rules": {
+    "max-len": ["error", 120],
+    "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
+  }
 }
