--- a/package.json
+++ b/package.json
@@ -1,38 +1,63 @@
 {
-  "name": "spa-github-pages",
-  "version": "5.0.0",
-  "private": true,
-  "description": "Single Page Apps for GitHub Pages",
+  "name": "weather-monitor",
+  "version": "1.0.0",
+  "author": {
+    "name": "Eugene Serebriakov",
+    "email": "serebryakov1409@gmail.com"
+  },
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --devtool eval-source-map --history-api-fallback --open",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "build:dev": "webpack && node staticServer.js",
+    "staticServer:dev": "node staticServer.js",
+    "static:watch": "webpack --watch --progress",
+    "jslint": "eslint --color './src/**/*.js'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rafrex/spa-github-pages.git"
+    "url": "git+ssh://git@bitbucket.org/eserebriakov/weather-monitor.git"
   },
-  "author": "Rafael Pedicini <code@rafrex.com>",
-  "license": "MIT",
+  "keywords": [
+    "React",
+    "Redux",
+    "Webpack"
+  ],
+  "license": "ISC",
+  "homepage": "https://bitbucket.org/eserebriakov/weather-monitor#readme",
   "dependencies": {
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-interactive": "^0.6.5",
-    "react-router-dom": "^4.1.1"
+    "react-helmet": "^5.1.3",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^1.4.6",
+    "webpack": "^2.5.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.11.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "node-static": "^0.7.9"
   }
 }
