--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "export NODE_ENV=dev; webpack && node staticServer.js",
-    "build:prod": "export NODE_ENV=prod; webpack -p",
+    "build:prod": "export NODE_ENV=prod; webpack -p && node staticServer.js",
     "staticServer:dev": "node staticServer.js",
     "static:watch": "webpack --watch --progress",
     "jslint": "eslint --color './src/**/*.js'"
@@ -29,13 +29,11 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.6",
     "webpack": "^2.5.1"
